compiler/test/operators/arithmetic_invalid.c2po
INPUT
    i0,i1: int;

FTSPEC
    (i0 pow -1) > 0;
    (i0 pow i1) > 0;
    sqrt(1) > 0;
    sqrt(i1) > 0;
